Code review comments: improved error msg, added grand-parent param TVE